file(GLOB_RECURSE JULIAN_PFAUL_LIBRARY_SOURCES CONFIGURE_DEPENDS src/*.cpp)
file(GLOB_RECURSE JULIAN_PFAUL_LIBRARY_HEADERS CONFIGURE_DEPENDS src/*.h)
file(GLOB_RECURSE JULIAN_PFAUL_LIBRARY_INL_HEADERS CONFIGURE_DEPENDS src/*.inl)

add_library(julian_pfaul_library
        ${JULIAN_PFAUL_LIBRARY_SOURCES}
        ${JULIAN_PFAUL_LIBRARY_HEADERS}
        ${JULIAN_PFAUL_LIBRARY_INL_HEADERS}
)

target_include_directories(julian_pfaul_library PUBLIC src)

file(GLOB_RECURSE JULIAN_PFAUL_LIBRARY_TESTS CONFIGURE_DEPENDS test/*.cpp)